# Win-CodexBar

./: CHANGELOG.md  Cargo.toml  README.es-MX.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  version.env
.circleci/: config.yml
apps/desktop-tauri/: package-lock.json  package.json
apps/desktop-tauri/src/: styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: auto_refresh.rs  main.rs  proof_harness.rs  state.rs
apps/desktop-tauri/src-tauri/src/commands/: bridge.rs  chart.rs  providers.rs  tests.rs
apps/desktop-tauri/src-tauri/src/shell/: transition.rs
apps/desktop-tauri/src/lib/: demoProviders.ts
apps/desktop-tauri/src/surfaces/: PopOutPanel.tsx  TrayPanel.tsx
docs/: BUILDING.md
rust/: Cargo.toml
rust/src/: cost_scanner.rs  updater.rs
rust/src/browser/: cookies.rs
rust/src/core/: credential_migration.rs
rust/src/providers/antigravity/: mod.rs
rust/src/providers/bedrock/: mod.rs
rust/src/providers/claude/: oauth.rs  web_api.rs
rust/src/providers/codex/: api.rs
rust/src/providers/copilot/: api.rs
rust/src/providers/deepseek/: mod.rs
rust/src/providers/grok/: mod.rs
rust/src/providers/kimik2/: mod.rs
rust/src/settings/: api_keys.rs
scripts/: windows-release-build.ps1  windows-smoke-install.ps1
scripts/ci/: assert-warm-build.cmd  buildkite-release.ps1  circleci-release.cmd  circleci-release.ps1  install-circleci-release-tools.ps1
